# idotmatrix-controller

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-18-idotmatrix-web-ui.md
docs/superpowers/specs/: 2026-06-18-idotmatrix-web-ui-design.md
idotctl/: __init__.py  cli.py  config.py  errors.py
idotctl/core/: device.py  imaging.py
idotctl/webserver/: app.py  session.py  staging.py
idotctl/webserver/static/: app.js  index.html  style.css
tests/: test_app.py  test_cli.py  test_config.py  test_device.py  test_errors.py  test_imaging.py  test_session.py  test_staging.py  test_webserver_import.py
